--- a/src/pages/clubs/writers-block/index.astro
+++ b/src/pages/clubs/writers-block/index.astro
@@ -2,6 +2,9 @@
     import ClubLayout from "@layouts/ClubLayout.astro";
     import Pen from "@assets/clubIcons/noun-writing-3239278.svg"
     import QuickAction from "@components/astro/ClubActions.astro";
+
+    import Stories from "@components/react/writersBlock/Stories";
+    import Prompts from "@components/react/writersBlock/Prompts";
 ---
 
 <ClubLayout title="Clubs | Writers" clubName="Writers Block" bigText="Writers" clubLogo={Pen} logoCredit="Writing by Vectors Point" logoURL="https://thenounproject.com/browse/icons/term/writing/">
@@ -10,7 +13,7 @@
         <QuickAction text="Members" URL="/clubs/writers-block/members" viewBox="640 512" SVG="M144 0a80 80 0 1 1 0 160A80 80 0 1 1 144 0zM512 0a80 80 0 1 1 0 160A80 80 0 1 1 512 0zM0 298.7C0 239.8 47.8 192 106.7 192h42.7c15.9 0 31 3.5 44.6 9.7c-1.3 7.2-1.9 14.7-1.9 22.3c0 38.2 16.8 72.5 43.3 96c-.2 0-.4 0-.7 0H21.3C9.6 320 0 310.4 0 298.7zM405.3 320c-.2 0-.4 0-.7 0c26.6-23.5 43.3-57.8 43.3-96c0-7.6-.7-15-1.9-22.3c13.6-6.3 28.7-9.7 44.6-9.7h42.7C592.2 192 640 239.8 640 298.7c0 11.8-9.6 21.3-21.3 21.3H405.3zM224 224a96 96 0 1 1 192 0 96 96 0 1 1 -192 0zM128 485.3C128 411.7 187.7 352 261.3 352H378.7C452.3 352 512 411.7 512 485.3c0 14.7-11.9 26.7-26.7 26.7H154.7c-14.7 0-26.7-11.9-26.7-26.7z" />
     </section>
     <main class="flex flex-col" slot="main">
-        <section class="mt-4 mb-8 h-fullscreen-1/3 flex px-2">
+        <section id="brick" class="mt-4 mb-8 h-fullscreen-1/4 flex px-2">
             <p class="w-full text-end self-center">Writer's Block is for students who are interested in sharing their writings with others.
                 <br/>Members meet to listen, discuss, and edit. Also, members have access to the Writer's Block Blog where they can share ideas and find information on writing.
                 <br/>You will participate in special events like author visits and lunch meetings.
@@ -18,24 +21,22 @@
         </section>
         <section class="flex flex-col space-y-8 px-2 pb-8">
             <article class="flex flex-col">
-                <h2 class="text-5xl font-bold tracking-wide">Stories:</h2>
-                <div class="h-fullscreen-2/3 px-1"></div>
+                <h2 class="text-5xl font-bold tracking-wide mb-1">Stories:</h2>
+                <p class="text-sm mt-1">Full stories written by the Writers Block members!</p>
+                <Stories client:visible />
             </article>
             <article class="flex flex-col">
-                <h2 class="text-5xl font-bold tracking-wide">Prompts:</h2>
-                <div class="h-fullscreen-2/3 px-1"></div>
-            </article>
-            <article class="flex flex-col">
-                <h2 class="text-5xl font-bold tracking-wide">Collections:</h2>
-                <div class="h-fullscreen-2/3 px-1"></div>
+                <h2 class="text-5xl font-bold tracking-wide mb-1">Prompts:</h2>
+                <p class="text-sm mt-1">Our weekly prompts, and each response to the prompt!</p>
+                <Prompts client:visible />
             </article>
         </section>
     </main>
 </ClubLayout>
 
 <style is:inline>
-    main{
+    #brick{
 		background-color: #0c080a;
-		background-image: linear-gradient(to top, #0C080A, transparent 5%, transparent 85%, #0C080A 95%), url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23a80c25' fill-opacity='0.35'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+		background-image: linear-gradient(to left, transparent 50%, #0c080a 80%), url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23a80c25' fill-opacity='0.35'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 	}
 </style>
